@@ -74,7 +74,8 @@ extern "C" {
  * These (input) filters are internal to the mod_core operation.
  */
 apr_status_t ap_http_filter(ap_filter_t *f, apr_bucket_brigade *b,
-                            ap_input_mode_t mode, apr_off_t *readbytes);
+                            ap_input_mode_t mode, apr_read_type_e block,
+                            apr_off_t *readbytes);
 
 char *ap_response_code_string(request_rec *r, int error_index);
 
