@@ -1550,8 +1550,8 @@ static int pass_request(request_rec *r)
     /* ### this "read one line" doesn't seem right... shouldn't we be
        ### reading large chunks of data or something?
     */
-    while (ap_get_brigade(r->input_filters, bb, AP_MODE_NONBLOCKING,
-                          &zero /* read one line */) == APR_SUCCESS) {
+    while (ap_get_brigade(r->input_filters, bb, AP_MODE_GETLINE, 
+                          APR_NONBLOCK_READ, &zero) == APR_SUCCESS) {
         apr_bucket *e;
         APR_BRIGADE_FOREACH(e, bb) {
             const char *str;
@@ -1656,7 +1656,9 @@ static int perchild_post_read(request_rec *r)
 }
 
 static apr_status_t perchild_buffer(ap_filter_t *f, apr_bucket_brigade *b,
-                                    ap_input_mode_t mode, apr_off_t *readbytes)
+                                    ap_input_mode_t mode, 
+                                    apr_read_type_e block,
+                                    apr_off_t *readbytes)
 {
     apr_bucket *e;
     apr_status_t rv;
@@ -1664,7 +1666,8 @@ static apr_status_t perchild_buffer(ap_filter_t *f, apr_bucket_brigade *b,
     const char *str;
     apr_size_t len;
 
-    if ((rv = ap_get_brigade(f->next, b, mode, readbytes)) != APR_SUCCESS) {
+    if ((rv = ap_get_brigade(f->next, b, mode, block, 
+                             readbytes)) != APR_SUCCESS) {
         return rv;
     }
 
