@@ -356,10 +356,12 @@ AP_DECLARE(void) ap_remove_output_filter(ap_filter_t *f)
 AP_DECLARE(apr_status_t) ap_get_brigade(ap_filter_t *next,
                                         apr_bucket_brigade *bb, 
                                         ap_input_mode_t mode,
+                                        apr_read_type_e block,
                                         apr_off_t *readbytes)
 {
     if (next) {
-        return next->frec->filter_func.in_func(next, bb, mode, readbytes);
+        return next->frec->filter_func.in_func(next, bb, mode, block, 
+                                               readbytes);
     }
     return AP_NOBODY_READ;
 }
